# fintechco-fraud-detection-demo

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_initial_exploration.ipynb  02_baseline_model.ipynb  03_advanced_techniques.ipynb  04_production_ready.ipynb
src/: __init__.py  data_utils.py  explainer.py  fraud_detector.py  model_utils.py
